# SnakeCPP

./: CMakeLists.txt  main.cpp
src/: Apple.cpp  Apple.h  Game.cpp  Game.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Sprite.cpp  Sprite.h
src/utils/: Button.cpp  Button.h  Vector2.cpp  Vector2.h
